# HexManifestation

./: .gitignore  README.md  build.gradle  gradle.properties  pyproject.toml  settings.gradle
.github/workflows/: docs-pages.yml  release-jar.yml
.hexdoc/: manifestation.hexdoc.json
.tmp-pipmeta/: nbtlib-1.12.1-py3-none-any.whl
_site/dst/docs/: index.html
_site/dst/docs/meta/: sitemap-minecraft.json  sitemap.json
_site/dst/docs/v/0.2.0/: index.html
_site/dst/docs/v/0.2.0/1.0.dev0/en_us/: .sitemap-marker.json  index.html
_site/dst/docs/v/0.2.0/en_us/: index.html
_site/dst/docs/v/latest/26fe800/en_us/: .sitemap-marker.json
_site/dst/docs/v/latest/92380bc/en_us/: .sitemap-marker.json
_site/src/docs/v/0.2.0/1.0.dev0/en_us/: .sitemap-marker.json  index.html  index.js
_site/src/docs/v/latest/26fe800/en_us/: index.html  index.js
_site/src/docs/v/latest/92380bc/en_us/: index.html  index.js
doc/: README.md  hexdoc.toml  nodemon.json  pattern_stubs.json
doc/resources/assets/manifestation/lang/: en_us.flatten.json5
doc/src/hexdoc_manifestation/: __gradle_version__.py  __init__.py  _hooks.py
docs/: hex-pattern-scribe.html  index.html  index.md  patterns.html
src/main/java/com/bluup/manifestation/: Manifestation.java
src/main/java/com/bluup/manifestation/client/: ActiveMenuState.java  ManifestationClient.java
src/main/java/com/bluup/manifestation/common/: ManifestationNetworking.java
src/main/java/com/bluup/manifestation/mixin/: BlockEntityRedstoneImpetusMixin.java
src/main/kotlin/com/bluup/manifestation/server/: ManifestationConfig.kt  (+2 more)
src/main/resources/: fabric.mod.json  manifestation.mixins.json
src/main/resources/assets/manifestation/lang/: en_us.json
(+107 files in other folders)
